Added project generation files for: codeblocks, vscode and vs2022

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,9 @@
 [submodule "Saturn/vendor/glm"]
 	path = Saturn/vendor/glm
 	url = https://github.com/g-truc/glm.git
+[submodule "vendor/premake/premake_customization/workspaces/vscode"]
+	path = vendor/premake/premake_customization/workspaces/vscode
+	url = https://github.com/MaroueneBoughoufa/premake-vscode.git
+[submodule "vendor/premake/premake_customization/workspaces/codeblocks"]
+	path = vendor/premake/premake_customization/workspaces/codeblocks
+	url = https://github.com/MaroueneBoughoufa/premake-codeblocks.git
