Added transforms to the renderer

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,16 @@
 Makefile
 bin/
 bin-int/
-Saturn/Saturn/
-Sandobox/Sandbox/
 .vs/
+.codelite/
+.vscode/
 scripts/__pycache__/
 vendor/premake/bin/
-.codelite/
 *imgui.ini
 *.workspace
 *.project
+*.cbp
+*.layout
 *.mk
 *.sln
 *.vcxproj*
