--- a/.gitmodules
+++ b/.gitmodules
@@ -20,3 +20,4 @@
 [submodule "vendor/premake/premake_customization/workspaces/codeblocks"]
 	path = vendor/premake/premake_customization/workspaces/codeblocks
 	url = https://github.com/MaroueneBoughoufa/premake-codeblocks.git
+	branch = no-message
