--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -16,18 +16,15 @@ jobs:
        
       - name: Generate Submodules
         run: git submodule update --init
-     
-      - name: Setup msbuild
-        uses: microsoft/setup-msbuild@v1.1
 
-      - name: Setup Python
-        uses: actions/setup-python@v3.1.2
+      - name: Setup GCC
+        run: sudo apt-get update && sudo apt install build-essential
         
       - name: Download Premake
-        run: cd scripts && python3 setup.py && cd ..
+        uses: BEASTSM96/premake-action@v1.3
         
       - name: Generate Project Files
-        run: ./vendor/premake/bin/premake5 gmake2
+        run: tpremake\premake5 gmake2
         
-      - name: Build Solution
-        run: make
+      - name: Build Project
+        run: make config=dist
