--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -24,7 +24,7 @@ jobs:
         uses: BEASTSM96/premake-action@v1.3
         
       - name: Generate Project Files
-        run: tpremake\premake5 gmake2
+        run: tpremake/premake5 gmake2
         
       - name: Build Project
         run: make config=dist
