--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -27,4 +27,4 @@ jobs:
         run: tpremake\premake5.exe vs2022
         
       - name: Build Solution
-        run: msbuild -m /t:Build /p:Configuration=Dist /p:Platform=x64 SaturnEngine.sln /system:windows
+        run: msbuild -m /t:Build /p:Configuration=Dist /p:Platform=x64 SaturnEngine.sln
