--- a/.github/workflows/Windows.yml
+++ b/.github/workflows/Windows.yml
@@ -2,9 +2,9 @@ name: CI(Windows)
 
 on:
   push:
-    branches: [main]
+    branches: [master]
   pull_request:
-    branches: [main]
+    branches: [master]
 jobs:
   build:
     runs-on: windows-latest
