--- a/.github/workflows/Linux.yml
+++ b/.github/workflows/Linux.yml
@@ -21,7 +21,7 @@ jobs:
         run: sudo apt-get update && sudo apt install build-essential
 
       - name: Setup X11
-        run: apt-get install libx111-dev && apt-get install xorg-dev
+        run: sudo apt-get install libx111-dev &&  sudo apt-get install xorg-dev
 
       - name: Download premake
         uses: BEASTSM96/premake-action@v1.3
